<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.simonegazza</groupId>
	<artifactId>mzn-lift</artifactId>
	<version>0.1</version>
	<name>Parameter lifting parser</name>
	<description>MiniZinc to MiniZinc transpiler for parameter lifting</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>25</maven.compiler.release>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.13.2</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.1.0-M1</version>
			<scope>test</scope>
		</dependency>
		<!-- Command line options -->
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.7.7</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>lifter</finalName>
		<plugins>
			<!-- Tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<printSummary>true</printSummary>
					<reportFormat>plain</reportFormat>
				</configuration>
			</plugin>
			<!-- Spotless - automatic with compile -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.43.0</version>
				<configuration>
					<java>
						<eclipse>
							<version>4.26</version>
							<file>${project.basedir}/code-style/code-style.xml</file>
						</eclipse>
						<removeUnusedImports />
						<trimTrailingWhitespace />
						<endWithNewline />
						<importOrder />
						<formatAnnotations />
					</java>
				</configuration>
				<executions>
					<execution>
						<id>format-on-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>apply</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>checkstyle-test</id>
						<phase>test</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
					<execution>
						<id>checkstyle-verify</id>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>${project.basedir}/code-style/doc-style.xml</configLocation>
					<failOnViolation>true</failOnViolation>
					<consoleOutput>true</consoleOutput>
				</configuration>
			</plugin>
			<plugin>
				<!-- exec:java -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<mainClass>me.simonegazza.lift.Main</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<!-- ANTLR4 - automatic with compile -->
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.13.2</version>
				<executions>
		        <!-- Execution for MiniZinc -->
		        <execution>
		            <id>antlr-minizinc</id>
		            <goals><goal>antlr4</goal></goals>
		            <configuration>
		                <sourceDirectory>${project.basedir}/grammars</sourceDirectory>
		                <includes><include>MiniZinc.g4</include></includes>
		                <outputDirectory>${project.basedir}/src/main/java/me/simonegazza/antlr/minizinc</outputDirectory>
		                <visitor>true</visitor>
		                <arguments>
		                    <argument>-package</argument>
		                    <argument>me.simonegazza.antlr.minizinc</argument>
		                </arguments>
		            </configuration>
		        </execution>
		        <!-- Execution for FlatZinc -->
		        <execution>
		            <id>antlr-flatzinc</id>
		            <goals><goal>antlr4</goal></goals>
		            <configuration>
		                <sourceDirectory>${project.basedir}/grammars</sourceDirectory>
		                <includes><include>FlatZinc.g4</include></includes>
		                <outputDirectory>${project.basedir}/src/main/java/me/simonegazza/antlr/flatzinc</outputDirectory>
		                <visitor>true</visitor>
		                <arguments>
		                    <argument>-package</argument>
		                    <argument>me.simonegazza.antlr.flatzinc</argument>
		                </arguments>
		            </configuration>
		        </execution>
		    </executions>
			</plugin>
			<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.5.0</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>me.simonegazza.lift.Main</mainClass>
                            </transformer>
                        </transformers>
                    </configuration>
                </execution>
            </executions>
        </plugin>
		</plugins>
	</build>
</project>